--- a/package.json
+++ b/package.json
@@ -3,8 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+      "start": "node ./app/index.js"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-node7": "^1.5.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "flow-bin": "^0.40.0",
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.30",
+    "gulp-shell": "^0.6.1",
+    "gulp-watch": "^4.3.11",
+    "rimraf": "^2.6.1",
+    "run-sequence": "^1.2.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.16.1",
+    "express": "^4.14.1",
+    "morgan": "^1.8.1",
+    "multer": "^1.3.0"
+  }
 }
